<resources>
    <string name="app_name">BaiTapTuan2</string>
    // Bai2
    <string name="tienquanca">Tiến Quân Ca</string>

    // Bai 3
    <string name="mucsic_player">Music Player</string>
    <string name="Tutorials_point">Tutorials point</string>
    <string name="play"><![CDATA[>]]></string>
    <string name="rewind"><![CDATA[<<]]></string>
    <string name="forward"><![CDATA[>>]]></string>
    <string name="pause">||</string>
</resources>